--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 hello.greeting = SALUTO PROP - BELLAAAAA 
 management.security.enabled=false
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#	//create | update | none
+
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example?autoReconnect=true&useSSL=false
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
