--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
+# proprietà utilizzata nel codice
 hello.greeting = SALUTO PROP - BELLAAAAA 
+
+# disabilitare la security
 management.security.enabled=false
 
-spring.jpa.hibernate.ddl-auto=update
-#	//create | update | none
+# dare il nome alla applicazione dopo localhost:8080 /app
+server.contextPath = /app
 
+# settare lo stato di modifica del db	[ create | update | none ]
+spring.jpa.hibernate.ddl-auto=update
+# indirizzo
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example?autoReconnect=true&useSSL=false
+# user
 spring.datasource.username=springuser
+# pass
 spring.datasource.password=ThePassword
