--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ management.security.enabled=false
 # dare il nome alla applicazione dopo localhost:8080 /app
 server.contextPath = /app
 
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # settare lo stato di modifica del db	[ create | update | none ]
 spring.jpa.hibernate.ddl-auto=update
 # indirizzo
