--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,31 @@
 		</dependency>
 
 		<!-- DB H2 - in memory DB -->
-		<!-- <dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId> 
-			</dependency> -->
+		<!-- <dependency> 
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId> 
+		</dependency> -->
+			
+		<!-- ######################## -->
+		<!-- ### LIBRERIE VECCHIE ### -->
+		<!-- ######################## -->
+		
+		<!-- Strumenti per interagire con pagine WEB -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.10.3</version>
+		</dependency>
+
+		<!-- Browser per scaricare pagine html bloccate  -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+			
+			
+			
 	</dependencies>
 
 	<build>
