--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,22 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # settare lo stato di modifica del db	[ create | update | none ]
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # indirizzo
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example?autoReconnect=true&useSSL=false
 # user
 spring.datasource.username=springuser
 # pass
 spring.datasource.password=ThePassword
+
+
+# Abilita la possibilita di mettere la strategia di creazione dell'id a TABLE
+#spring.jpa.hibernate.use-new-id-generator-mappings = true
+
+# Per far si che gli inserimenti siano piu' veloci ed evitare che ne venga fatto uno per volta setta quanti per volta ne devono essere fatti
+#spring.jpa.properties.hibernate.jdbc.batch_size=50
+
+
+#hibernate.jdbc.batch_size= 50
+
+#spring.datasource.initialize=false
