--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-
+			
+		<!-- 	<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency> -->
 
 		<!-- Permette il settaggio delle proprietà lette a runtime in application.properties -->
 		<dependency>
@@ -88,6 +92,8 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId> 
 		</dependency> -->
+
+			
 			
 		<!-- ######################## -->
 		<!-- ### LIBRERIE VECCHIE ### -->
